WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176170
MSE-to-Canvas painting can become "stuck" during heavy workloads
https://bugs.webkit.org/show_bug.cgi?id=176170
Summary
MSE-to-Canvas painting can become "stuck" during heavy workloads
Jer Noble
Reported
2017-08-31 10:16:21 PDT
MSE-to-Canvas painting can become "stuck" during heavy workloads
Attachments
Patch
(10.68 KB, patch)
2017-08-31 10:21 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(10.81 KB, patch)
2017-08-31 10:21 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-08-31 10:21:00 PDT
Created
attachment 319471
[details]
Patch
Jer Noble
Comment 2
2017-08-31 10:21:42 PDT
Created
attachment 319472
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2017-08-31 10:22:18 PDT
<
rdar://problem/34188602
>
WebKit Commit Bot
Comment 4
2017-08-31 11:48:48 PDT
Comment on
attachment 319472
[details]
Patch Clearing flags on attachment: 319472 Committed
r221430
: <
http://trac.webkit.org/changeset/221430
>
WebKit Commit Bot
Comment 5
2017-08-31 11:48:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug